Fixed an issue where counters were not visible.

--- a/yugi/js_src/game/ui/counters/counters.css
+++ b/yugi/js_src/game/ui/counters/counters.css
@@ -4,6 +4,7 @@
 
 .yugi-counters {
 	position: absolute;
+	z-index: CARD_Z_INDEX;
 }
 
 .yugi-counter {
